<resources>
    <string name="app_name">RajagaluhKidul</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>

    <!--Into Fragment values-->
    <string name="intro_title_1">Selamat Datang!</string>
    <string name="intro_title_2">UMKM</string>
    <string name="intro_title_3">Wisata dan Budaya</string>
    <string name="intro_title_4">Literasi Keuangan</string>
    <string name="intro_sub_title_1">RajagaluhKidul Apps merupakan aplikasi mobile yang menyajikan berbagai informasi seputar produk-produk UMKM, Wisata, serta Budaya yang terdapat di wilayah Desa Rajagaluh Kidul</string>
    <string name="intro_sub_title_2">Dengan berfokus pada pengembangan UMKM, disini kita bisa menjelajahi Produk-produk lokal UMKM Lengkap yang terdapat di Desa Rajagaluh Kidul seperti Opak, Gula Cakar, dan lainnya!</string>
    <string name="intro_sub_title_3">Disini kita juga bisa menjelajahi wisata-wisata yang ada di Rajagaluh Kidul begitu pula lengkap dengan Pengetahuan Budaya yang ada!</string>
    <string name="intro_sub_title_4">Untuk mendukung inklusi ekonomi keuangan, disini kita juga dapat belajar mengenai literasi keuangan yang baik!</string>
    <string name="skip">SKIP</string>
    <string name="lanjutkan">Next</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="atau">atau</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="daftar">Daftar</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sudah_punya_akun_masuk">Sudah Punya Akun ? Masuk</string>
    <string name="home">Home</string>
    <string name="berita">Berita</string>
    <string name="favourite">Favourite</string>
    <string name="account">Account</string>
    <string name="change_profile">Change Profile</string>
    <string name="account_setting">Account Setting</string>
    <string name="logout">Logout</string>
    <string name="version_1_1_0">Version 1.1.0</string>
    <string name="search">Search</string>
    <string name="pencarian">Pencarian</string>
    <string name="umkm">UMKM</string>
    <string name="location">Location</string>
    <string name="spesialisasi">Spesialisasi</string>
    <string name="pesan">Pesan</string>
    <string name="owner">Owner</string>
    <string name="wisata">Wisata</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="budaya">Budaya</string>
    <string name="masyarakat">Masyarakat</string>
    <string name="ethnography_of_rajagaluh_kidul">Ethnography of Rajagaluh Kidul</string>
</resources>