<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background_satu"
    tools:context=".view.WisataBudayaFragment"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginBottom="50dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:cardBackgroundColor="#00FFFFFF"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent">


                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="@color/earth_02"
                    android:fontFamily="@font/poppins_bold"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck"
                    tools:layout_editor_absoluteX="152dp"
                    tools:layout_editor_absoluteY="11dp" />
            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_search"
                android:layout_width="300dp"
                android:elevation="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/earth_02"
                    android:textColorHint="@color/earth_02"
                    app:startIconDrawable="@drawable/baseline_search_24"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pencarian"
                        />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:iconifiedByDefault="false" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.card.MaterialCardView>



            <TextView
                android:id="@+id/tv_wisata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cv_search"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/wisata"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="@dimen/margin_20"
                />
            <TextView
                android:id="@+id/tv_wisata_lihatsemua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/cv_search"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/lihat_semua"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/poppins_light"
                android:layout_marginEnd="@dimen/margin_20"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_wisata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/tv_wisata"
                android:layout_marginTop="@dimen/margin_10"
                />

            <TextView
                android:id="@+id/tv_Budaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rv_wisata"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/budaya"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="@dimen/margin_20"
                />
            <TextView
                android:id="@+id/tv_kerajinan_lihatsemua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rv_wisata"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/lihat_semua"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/poppins_light"
                android:layout_marginEnd="@dimen/margin_20"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_budaya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/tv_Budaya"
                android:layout_marginTop="@dimen/margin_10"
                />

            <TextView
                android:id="@+id/tv_masyarakat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rv_budaya"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/masyarakat"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="@dimen/margin_20"
                />
            <TextView
                android:id="@+id/tv_masyarakat_lihatsemua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rv_budaya"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/lihat_semua"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/poppins_light"
                android:layout_marginEnd="@dimen/margin_20"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_masyarakat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                app:layout_constraintTop_toBottomOf="@+id/tv_masyarakat"
                android:layout_marginTop="@dimen/margin_10"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_gravity="bottom"/>
</androidx.constraintlayout.widget.ConstraintLayout>